scripts/nullaway/nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8.txt
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:10: error: [NullAway] initializer method does not guarantee @NonNull field NotificationEmprunts (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Enseignant(int i, String n, String p, String t, int nbEM) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:15: error: [NullAway] parameter media is @NonNull, but parameter in superclass method utilisateurs.Utilisateur.eligibilite(medias.Media) is @Nullable
    protected int eligibilite(Media media) {
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:26: error: [NullAway] parameter idEmprunt is @NonNull, but parameter in superclass method utilisateurs.Utilisateur.commenter(int,int,java.lang.String) is @Nullable
    public int commenter(int idEmprunt, int n, String com) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Utilisateur.java:180: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return resultat;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:23: error: [NullAway] initializer method does not guarantee @NonNull field commentaire (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Emprunt(utilisateurs.Utilisateur e, medias.Media m, Date de, Date dr) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:27: error: [NullAway] assigning @Nullable expression to @NonNull field
        commentaire = null;
                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Projet.java:24: error: [NullAway] initializer method does not guarantee @NonNull field stage (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Projet(Cours c, ArrayList<utilisateurs.Etudiant> e, int i, String n, String d, Date dd, Date df) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:12: error: [NullAway] parameter media is @NonNull, but parameter in superclass method utilisateurs.Utilisateur.eligibilite(medias.Media) is @Nullable
    protected int eligibilite(Media media) {
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:27: error: [NullAway] parameter idEmprunt is @NonNull, but parameter in superclass method utilisateurs.Utilisateur.commenter(int,int,java.lang.String) is @Nullable
    public int commenter(int idEmprunt, int n, String com) {
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurUser.java:87: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        cours.setProf(null);
                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurUser.java:151: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:34: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        Projet projet = new Projet(cours, null, idProjet, n, d, dd, df);
                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/test/Main.java:6: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        Bdd.main(null);
                 ^
    (see http://t.uber.com/nullaway )
13 errors
